# laptop-price-predictor-app

./: .gitignore  main.py  pyproject.toml
data/: raw.dvc
notebooks/: README.md  v2_page_table.ipynb  v4.ipynb
notebooks/data-cleaning/: c5-check-null-values.ipynb  c6-fill-the-null-values.ipynb  c7-column-data-cleaning.ipynb
notebooks/data-scraping/: s3_page_extra_data.ipynb
pages/: README.md  page_2.html  product_1.html
script/: 01_scraping_data.py  02_check_null_values.py  03_feature_cleaning.py  README.md  check_null_values.py  scraping_data.py
test/: fill_null_values.py
