[project]
name = "laptop-price-predictor"
version = "0.1.0"
description = "A end-to-end Machine Learning Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "curl-cffi>=0.14.0",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pip>=25.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "show-file-tree>=0.0.1",
    "update>=0.0.1",
]
