[project]
name = "laptop-price-predictor"
version = "0.1.0"
description = "A end-to-end Machine Learning Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "curl-cffi>=0.14.0",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "polars>=1.36.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
    "show-file-tree>=0.0.1",
    "update>=0.0.1",
]
